--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img src="img/balloon.png" alt="" />
         <img src="img/wine-glasses.png" alt="" />
       </div>
-      <h1>Gracias por este fantastico año.</h1>
+      <h1>Thank you for this fantastic year.</h1>
     </div>
     <div class="cont-question">
       <div class="cont-alert" id="cont-para"></div>
