--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
           </button>
         </div>
       </div>
+      <div class="cont-res">
+        <img src="img/hearts.png" alt="" id="heart" />
+      </div>
     </div>
 
     <script src="index.js"></script>
