--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     "
     />
     <link rel="stylesheet" href="index.css" />
-    <title>Document</title>
+    <title>Question<3</title>
   </head>
   <body>
     <div class="cont-header">
@@ -18,7 +18,7 @@
         <img src="img/balloon.png" alt="" />
         <img src="img/wine-glasses.png" alt="" />
       </div>
-      <h1>Thank you for this fantastic year.</h1>
+      <h1>Thank you for this fantastic year</h1>
     </div>
     <div class="cont-question">
       <div class="cont-alert" id="cont-para"></div>
